--- a/style.css
+++ b/style.css
@@ -9,14 +9,57 @@ body {
   line-height: 1.5;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
+.header {
+  overflow: hidden;
+  background-color: purple;
+  padding: 2px;
+}
+
+.header a{
+  float: left;
+  color: plum;
+  text-align: center;
+  text-decoration: none;
+  padding: 12px;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight:lighter;
+  background-color: plum;
+  color: purple;
+  text-decoration: none;
+}
+
+.header a:hover {
+    background-color: white;
+    color: #301934;
+  }
+
+.header-right {
+    font-weight: bold;
+    float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
+
 h6 {
   margin: 0;
 }
+
 
 p {
   margin: 0;
