--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5;
 }
 
 .header {
   overflow: hidden;
   background-color: purple;
-  padding: 2px;
+  padding: 5px;
 }
 
 .header a{
@@ -24,7 +24,6 @@ body {
   font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .header a.logo {
@@ -32,7 +31,6 @@ body {
   font-weight:lighter;
   background-color: plum;
   color: purple;
-  text-decoration: none;
 }
 
 .header a:hover {
@@ -54,6 +52,27 @@ body {
   .header-right {
     float: none;
   }
+}
+
+.hero-banner{
+  height: 300px;
+  width: 100%;
+  margin-bottom: 25px;
+  background-image: url(https://placehold.co/600x400);
+  background-size: cover;
+  background-color: plum;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.hero-banner h2{
+  position: relative;
+  top: 200px;
+  float: right;
+  height: 40px;
+  width: 350px;
+  background-color: plum;
+  border: 2px solid purple;
 }
 
 h6 {
